[package]
name = "vz"
version = "0.6.6"
edition = "2021"

[dependencies]
log = "*"
env_logger = "*"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
objc2 = { version = "0", features = ["std", "exception"] }
objc2-foundation = { version = "0", features = ["all", "dispatch"] }
objc2-virtualization = { version = "0", features = ["all"] }
objc2-app-kit = { version = "0", features = ["all"] }
block2 = "0"
dispatch = "0"
signal-hook = "0"
uuid = { version = "*", features = ["v7"] }
libc = "*"
