[package]
name = "vz"
version = "0.7.3"
edition = "2024"

[dependencies]
tracing = "*"
tracing-subscriber = "*"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
objc2 = { version = "0", features = ["std", "exception"] }
objc2-foundation = "0"
objc2-virtualization = "0"
objc2-app-kit = "0"
block2 = "0"
dispatch2 = "*"
signal-hook = "0"
uuid = { version = "*", features = ["v7"] }
libc = "*"
